chore: Plugin api improvements
